Refactor project structure and update configurations
- Updated .gitignore to simplify exclusion of build artifacts and dependencies.
- Removed legacy references to ModernFederationEntityBuilder, replacing with FederationEntityBuilder across documentation and code.
- Introduced new knip.config.ts for enhanced project analysis.
- Adjusted ESLint rules to relax functional programming constraints.
- Added comprehensive API documentation for Federation Composer and Performance API.
- Enhanced migration guide and error handling documentation.
- Implemented new examples and tests for improved coverage and demonstration of features.
- Removed outdated test files and streamlined test setup for better maintainability.

--- a/package.json
+++ b/package.json
@@ -97,13 +97,12 @@
   },
   "dependencies": {
     "@effect/schema": "^0.75.5",
-    "@graphql-tools/schema": "^10.0.25",
-    "@graphql-tools/utils": "^10.0.25",
     "dataloader": "^2.2.3",
     "effect": "^3.17.9",
     "graphql": "^16.11.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@types/node": "^24.3.0",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
