Remove migration guide and update documentation
- Deleted the MIGRATION.md file as it is no longer needed.
- Updated CLAUDE.md to reflect changes in important files and removed the migration section.
- Revised README.md to enhance clarity and improve the description of the framework.
- Adjusted security-checklist.md to generalize the security considerations for the Federation Framework.
- Cleaned up unnecessary references and improved overall documentation coherence.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cqrs/federation-v2",
   "version": "2.0.0",
-  "description": "Complete Apollo Federation 2.x framework with Effect-TS, ultra-strict TypeScript patterns, schema-first development, and enterprise-grade resilience features",
+  "description": "Apollo Federation framework with Effect-TS, ultra-strict TypeScript patterns, schema-first development, and enterprise-grade resilience features",
   "type": "module",
   "sideEffects": false,
   "exports": {
