Enhance testing setup and update dependencies
- Updated .gitignore to include Vitest-related directories and test artifacts.
- Modified package.json to switch testing framework from Bun to Vitest, including updates to test scripts.
- Added tsconfig.test.json for test-specific TypeScript configurations.
- Introduced vitest.config.ts for Vitest configuration, optimizing test environment settings.
- Created tests/setup.ts for global test setup and teardown procedures.
- Refactored various test files to align with Vitest, ensuring compatibility and improved test coverage.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,10 +31,22 @@
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "isolatedModules": true,
-    "types": ["bun-types", "node"],
+    "types": ["bun-types", "node", "vitest/globals"],
     "verbatimModuleSyntax": true,
-    "downlevelIteration": true
+    "downlevelIteration": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "src/examples/**/*"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "src/examples/**/*",
+    "tests/**/*",
+    "**/*.test.*",
+    "**/*.spec.*",
+    "path-mapping-example.ts"
+  ]
 }
