--- a/package.json
+++ b/package.json
@@ -71,13 +71,15 @@
     "build:tsc": "tsc --project tsconfig.build.json",
     "build:watch": "tsdown --watch",
     "clean": "rm -rf dist",
-    "test": "bun test",
-    "test:watch": "bun test --watch",
-    "test:unit": "bun test tests/unit",
-    "test:integration": "bun test tests/integration",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:unit": "vitest run tests/unit",
+    "test:integration": "vitest run tests/integration",
     "test:complete": "node test-complete.ts",
-    "test:coverage": "bun test --coverage",
+    "test:coverage": "vitest run --coverage",
     "typecheck": "tsc --noEmit",
+    "typecheck:tests": "tsc --noEmit --project tsconfig.test.json",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "format": "prettier --write 'src/**/*.{ts,tsx,json,md}'",
@@ -85,19 +87,16 @@
     "audit": "npm audit --audit-level moderate",
     "audit:fix": "npm audit fix",
     "security": "npm audit && npm run lint",
-    "demo": "bun src/examples/simple-entity.ts",
-    "demo:advanced": "bun src/examples/advanced-federation.ts",
-    "demo:ultra-strict": "bun src/examples/ultra-strict-entity-example.ts",
-    "demo:schema-first": "bun src/examples/schema-first-workflow-example.ts",
-    "demo:complete": "bun src/examples/complete-federation-demo.ts",
-    "dev": "bun --watch src/examples/basic-entity.ts",
-    "validate": "bun run typecheck && bun run lint && bun run test:complete",
+    "demo": "bun run test-complete.ts",
+    "demo:functional": "bun run functional-patterns-standalone.ts",
+    "demo:comprehensive": "bun run comprehensive-functional-demo.ts",
+    "dev": "bun --watch test-complete.ts",
+    "validate": "bun run typecheck && bun run typecheck:tests && bun run lint && bun run test:complete",
     "prepare": "husky",
     "prepublishOnly": "bun run clean && bun run build && bun run validate",
     "docs:generate": "typedoc --options typedoc.json"
   },
   "dependencies": {
-    "@effect/schema": "^0.75.5",
     "dataloader": "^2.2.3",
     "effect": "^3.17.9",
     "graphql": "^16.11.0"
@@ -107,18 +106,22 @@
     "@types/node": "^24.3.0",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "bun-types": "^1.2.21",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-functional": "^9.0.2",
     "fast-check": "^4.2.0",
+    "happy-dom": "^18.0.1",
     "husky": "^9.1.7",
     "knip": "^5.63.0",
     "lint-staged": "^16.1.5",
     "prettier": "^3.6.2",
     "tsdown": "^0.14.2",
     "typedoc": "^0.28.11",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
   },
   "peerDependencies": {
     "graphql": "^16.11.0"
