--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -6,5 +6,12 @@
     "noEmit": false
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "tests/**/*", "**/*.test.*", "**/*.spec.*"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "tests/**/*",
+    "**/*.test.*",
+    "**/*.spec.*",
+    "path-mapping-example.ts"
+  ]
 }
