Add import conversion script and path aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,15 @@
     "downlevelIteration": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@core": ["./src/core"],
+      "@core/*": ["./src/core/*"],
+      "@federation": ["./src/federation"],
+      "@federation/*": ["./src/federation/*"],
+      "@experimental": ["./src/experimental"],
+      "@experimental/*": ["./src/experimental/*"],
+      "@schema": ["./src/schema"],
+      "@schema/*": ["./src/schema/*"]
     }
   },
   "include": ["src/**/*"],
