--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -6,12 +6,5 @@
     "noEmit": false
   },
   "include": ["src/**/*"],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "tests/**/*",
-    "**/*.test.*",
-    "**/*.spec.*",
-    "path-mapping-example.ts"
-  ]
+  "exclude": ["node_modules", "dist", "tests"]
 }
