Enhance documentation and refactor code structure
- Added new CLI commands for federation project initialization, entity generation, schema validation, and development tools.
- Updated CLAUDE.md with detailed descriptions of new modules including Cloud, DevTools, Testing, CLI, and Facade.
- Refactored import paths in various files to improve clarity and maintainability.
- Introduced a new strict entity builder in the experimental module for enhanced type safety.
- Improved type handling in the Profiler and Schema tools for better performance metrics and visualization capabilities.

--- a/package.json
+++ b/package.json
@@ -91,8 +91,8 @@
       "require": "./dist/index.cjs"
     },
     "./schema": {
-      "types": "./dist/schema/ast-conversion.d.ts",
-      "import": "./dist/schema/ast-conversion.js",
+      "types": "./dist/schema/ast.d.ts",
+      "import": "./dist/schema/ast.js",
       "require": "./dist/index.cjs"
     },
     "./experimental": {
@@ -210,7 +210,7 @@
     "pattern-matching",
     "phantom-types",
     "schema-first",
-    "ast-conversion",
+    "ast",
     "circuit-breaker",
     "error-boundaries",
     "performance-optimization",
